# kamu-engine-risingwave

./: .dockerignore  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: kamu-release.yaml
await_tree/: index.html
batch_tasks/: index.html
cluster/: index.html
develop/nix/: devshell.nix  flake.nix
explain_distsql/: index.html
fragment_graph/: index.html
functions/: index.html
heap_profiling/: index.html
indexes/: index.html
internal_tables/: index.html
materialized_views/: index.html
node/: index.html
odf/: Dockerfile  Makefile  config.toml  notes.md
relation_graph/: index.html
settings/: index.html
sinks/: index.html
sources/: index.html
src/cmd_all/src/: single_node.rs
src/common/: Cargo.toml
src/common/src/: config.rs
src/common/src/array/: stream_chunk.rs
src/common/src/array/arrow/: arrow_impl.rs
src/common/src/vector/: distance.rs  mod.rs
src/connector/: Cargo.toml
src/connector/src/: macros.rs
src/connector/src/sink/: mod.rs  odf.rs
src/connector/src/source/: mod.rs  odf.rs
src/connector/src/source/odf/: mod.rs
src/frontend/src/handler/: create_sink.rs  create_source.rs
src/frontend/src/handler/create_source/: validate.rs
src/odf_adapter/: Cargo.toml
src/odf_adapter/src/: app.rs  engine.rs  grpc.rs  lib.rs  main.rs  rw.rs  utils.rs
src/odf_adapter/tests/: test.rs
src/odf_adapter/tests/tests/: data.rs  df_utils.rs  engine.rs  mod.rs  test_aggregation_inf_window.rs  test_aggregation_tumble.rs  test_error_handling.rs  test_flush.rs  test_join.rs  test_top_n.rs
src/storage/: Cargo.toml
src/storage/src/vector/: hnsw.rs
src/stream/src/executor/: watermark_filter.rs
src/stream/src/executor/source/: source_executor.rs
src/utils/workspace-config/: Cargo.toml
subscriptions/: index.html
tables/: index.html
views/: index.html
